--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Tchat - messenger </title>
+
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                white: '#eeeef6',
+                gray : '#b4b6cb',
+                blue : '#13145c',
+                salmon : '#d5bbc0',
+                purple : '#585d92',
+                dark : '#3a373d',
+                chocolate : '#a4766a'
+              }
+            }
+          }
+        }
+      </script>
+
 </head>
 <body>
     
