--- a/index.html
+++ b/index.html
@@ -1,32 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Tchat - messenger </title>
-
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                white: '#eeeef6',
-                gray : '#b4b6cb',
-                blue : '#13145c',
-                salmon : '#d5bbc0',
-                purple : '#585d92',
-                dark : '#3a373d',
-                chocolate : '#a4766a'
-              }
-            }
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Tchat - messenger </title>
+  
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            white_perso: '#eeeef6',
+            gray : '#b4b6cb',
+            blue : '#13145c',
+            salmon : '#d5bbc0',
+            purple : '#585d92',
+            dark : '#3a373d',
+            chocolate : '#a4766a'
           }
         }
-      </script>
-
+      }
+    }
+  </script>
+  
 </head>
 <body>
-    
+  <div class="layout bg-white_perso h-screen">
+    <div class="flex h-full p-5">
+      <div class="bg-blue opacity-75 w-16 h-100 rounded-3xl flex flex-col">
+        <div class="sidebar_1 p-3 flex flex-col text-center justify-between h-full divide-y divide-purple">
+          <div class="flex flex-col h-1/2">
+            <div class="logo messenger mt-2 text-purple">
+              <i class="fab fa-facebook-messenger text-2xl text-white_perso"></i>
+            </div>
+            <ul class="box-message flex flex-col md:mt-24">
+              <li class="m-1 p-1 rounded-lg"><a href=""><i class="far fa-envelope-open text-purple text-xl"></i></a></li>
+              <li class="m-1 p-1 rounded-lg bg-purple"><a href=""><i class="fas fa-envelope-open-text text-white text-xl"></i></a></li>
+              <li class="m-1 p-1 rounded-lg"><a href=""><i class="far fa-calendar-alt text-purple text-xl"></i></a></li>
+              <li class="m-1 p-1 rounded-lg"><a href=""><i class="fas fa-circle text-purple text-xl"></i></a></li>
+            </ul>
+          </div>
+          <div class="view-tools h-1/4 flex flex-col justify-between py-5 ">
+            <div class="flex flex-col">
+              <i class="fas fa-toggle-on text-white_perso text-xl"></i>
+              <i class="fas fa-toggle-off text-purple text-xl"></i>
+            </div>
+            <div>
+              <span class="text-white_perso text-xs tracking-tight block my-3 bg-blue opacity-100 p-1 rounded-md">Dark mode</span>
+              <i class="far fa-moon text-purple text-2xl"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="sidebar_2 bg-white_perso w-1/4 h-100 p-4">
+        <div class="header">
+          <section class="top-header">
+            <div><span class="text-xl font-bold">Messages</span><span class="bg-red-500 rounded-full py-1 px-2 font-bold text-white text-xs mx-1">5</span></div>
+            <div><button><i class="fas fa-search text-red-500"></i></button></div>
+          </section>
+          <ul class="conversation">
+            <li><a href="">All conversation</a></li>
+            <li><a href="">Archived</a></li>
+            <li><a href="">Starred</a></li>
+          </ul>
+        </div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="bg-salmon w-1/2 h-100"></div>
+      <div class="bg-dark w-1/5 h-100"></div>
+      
+    </div>
+  </div>
 </body>
 </html>
