--- a/index.html
+++ b/index.html
@@ -37,12 +37,18 @@
       }
     }
   </script>
+
+  <!--Offline-->
+  <link rel="stylesheet" href="./assets/tailwindcss.css">
+  <link rel="stylesheet" href="./assets/all.css">
+  <!--End line Offline-->
 </head>
 <body>
-  <div class="layout bg-white_perso h-screen">
+  <div class="layout bg-white_perso h-screen relative">
     <div class="flex h-full p-5">
-      <div class="bg-blue opacity-75 w-16 h-100 rounded-3xl flex flex-col">
-        <div class="sidebar_1 p-3 flex flex-col text-center justify-between h-full divide-y divide-purple">
+      <!--sidebar 1-->
+      <div class="sidebar_1 sticky top-0 bottom-0 bg-blue opacity-75 w-16 h-100 rounded-3xl flex flex-col">
+        <div class="p-3 flex flex-col text-center justify-between h-full divide-y divide-purple">
           <div class="flex flex-col h-1/2">
             <div class="logo messenger mt-2 text-purple">
               <i class="fab fa-facebook-messenger text-2xl text-white_perso"></i>
@@ -66,14 +72,15 @@
           </div>
         </div>
       </div>
+      <!--End sidebar 1-->
 
-      <div class="sidebar_2 bg-white_perso w-1/5 h-100">
+      <div class="sidebar_2 bg-gray-100 w-1/5 h-100">
         <div class="header p-4">
           <section class="top-header flex justify-between">
             <div><span class="text-xl font-bold">Messages</span><span class="bg-red-500 rounded-full py-1 px-2 font-bold text-white text-xs mx-1">5</span></div>
             <div><button class="text-xl text-gray bg-slate-200 p-1 rounded-full"><i class="fas fa-search"></i></button></div>
           </section>
-          <ul class="conversation flex justify-between mt-2">
+          <ul class="conversation_type flex justify-between mt-2">
             <li class="text-blue">
               <a href="" class="block text-xs font-extrabold mb-2">All conversations</a>
               <hr class="w-1/4">
@@ -88,12 +95,229 @@
             </li>
           </ul>
         </div>
-        <div class="team mt-3">
-          <h3 class="team-title text-xs text-gray font-extrabold uppercase mx-4 mb-1">team</h3>
-          <div class="h-16 bg-red-100"></div>
-          <div class="h-16 bg-red-200"></div>
+        <div class="conversation_list">
+          <div class="team mt-1">
+            <!--Teams conversations-->
+            <h3 class="team-title text-xs text-gray font-extrabold uppercase mx-4 mb-1">team</h3>
+            <ul>
+              <li class="conversation_item hover:bg-slate-200 active border-l-2 border-red-600 bg-gradient-to-r from-red-300 to-red-100 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul class="pr-2">
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur a</li>
+                </ul>
+              </li>
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+            </ul>
+            <!--End Teams conversations-->
+          </div>
+
+          <!--Personal discussions-->
+          <div class="personal-conversation">
+            <h3 class="team-title text-xs text-gray font-extrabold uppercase mx-4 my-4">Personal</h3>
+            <ul>
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+
+              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
+                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <ul>
+                  <li class="text-xs relative">
+                    <span class="font-bold">Name</span>
+                    <span class="block float-right">il y a 5min</span>  
+                  </li>
+                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <!--End Personal discussions-->
         </div>
-        <div></div>
       </div>
       <div class="bg-salmon w-1/2 h-100"></div>
       <div class="bg-dark w-1/5 h-100"></div>
