--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
   
   <title>Tchat - messenger </title>
   
   <style>
     *{
-      font-family : 'Roboto', sans-serif;
+      font-family : 'Fredoka', sans-serif;
     }
   </style>
 
@@ -44,10 +44,10 @@
   <!--End line Offline-->
 </head>
 <body>
-  <div class="layout bg-white_perso h-screen relative">
-    <div class="flex h-full p-5">
+  <div class="layout bg-white_perso h-screen max-h-screen">
+    <div class="flex h-full p-5 relative bg-white">
       <!--sidebar 1-->
-      <div class="sidebar_1 sticky top-0 bottom-0 bg-blue opacity-75 w-16 h-100 rounded-3xl flex flex-col">
+      <div class="sidebar_1 top-0 bg-blue opacity-75 w-16 h-100 rounded-3xl flex flex-col">
         <div class="p-3 flex flex-col text-center justify-between h-full divide-y divide-purple">
           <div class="flex flex-col h-1/2">
             <div class="logo messenger mt-2 text-purple">
@@ -74,8 +74,8 @@
       </div>
       <!--End sidebar 1-->
 
-      <div class="sidebar_2 bg-gray-100 w-1/5 h-100">
-        <div class="header p-4">
+      <div class="sidebar_2 overflow-y-scroll w-1/5 h-100">
+        <div class="header p-4 sticky top-0 bg-white">
           <section class="top-header flex justify-between">
             <div><span class="text-xl font-bold">Messages</span><span class="bg-red-500 rounded-full py-1 px-2 font-bold text-white text-xs mx-1">5</span></div>
             <div><button class="text-xl text-gray bg-slate-200 p-1 rounded-full"><i class="fas fa-search"></i></button></div>
@@ -103,21 +103,21 @@
               <li class="conversation_item hover:bg-slate-200 active border-l-2 border-red-600 bg-gradient-to-r from-red-300 to-red-100 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul class="pr-2">
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur a</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
             </ul>
@@ -129,191 +129,170 @@
             <h3 class="team-title text-xs text-gray font-extrabold uppercase mx-4 my-4">Personal</h3>
             <ul>
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
-                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
+                <span class="avatar ml-4"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
-                    <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                  <li class="text-xs flex justify-between">
+                    <p class="font-bold">Name</p>
+                    <p class="text-gray-400 float-right">il y a 6min</p>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs mt-2">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
               <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                 <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
                 <ul>
-                  <li class="text-xs relative">
+                  <li class="text-xs flex justify-between">
                     <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
+                    <span class="text-gray-400">il y a 5min</span>  
                   </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                  <li class="text-xs">Lorem ipsum dolor sit.</li>
                 </ul>
               </li>
 
-              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
-                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
-                <ul>
-                  <li class="text-xs relative">
-                    <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
-                  </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                </ul>
-              </li>
-
-              <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
-                <span class="avatar ml-5"><i class="fas fa-circle text-gray-500 text-5xl"></i></span>
-                <ul>
-                  <li class="text-xs relative">
-                    <span class="font-bold">Name</span>
-                    <span class="block float-right">il y a 5min</span>  
-                  </li>
-                  <li class="text-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                </ul>
-              </li>
             </ul>
           </div>
           <!--End Personal discussions-->
