--- a/index.html
+++ b/index.html
@@ -361,24 +361,24 @@
                 <div class="header">
                     <div class="ml-auto flex items-center justify-between w-3/4 mt-2">
                         <div class="mr-5 w-1/5">
-                            <span class="bg-gray-100 p-2 rounded relative">
+                            <button class="bg-gray-100 focus:outline-none p-2 rounded relative">
                                 <i class="fa fa-bell text-xl"></i>
                                 <span class="absolute -top-1 -right-1 p-1 rounded-full bg-red-500"></span>
-                            </span>
+                            </button>
                         </div>
                         
                         <div class="w-5/6 flex items-center justify-between p-1">
                             <span class="userimage -mr-5 z-10">
                                 <img src="./assets/img/avatar4.png" class="w-12 rounded-full" alt="user">
                             </span>
-                            <button class="usename w-5/6 flex justify-between p-1 bg-gray-100 rounded-r-3xl">
+                            <button class="usename focus:outline-none w-5/6 flex justify-between p-1 bg-gray-100 rounded-r-3xl">
                                 <span class="font-bold ml-5">Maksud</span>
                                 <span class="mx-2 text-gray-300"><i class="fa fa-chevron-down"></i></span>
                             </button>
                         </div>
                     </div>
                 </div>
-                <div class="max-h-full mt-6">
+                <div class="h-full overflow-hidden mt-6">
                     <p class="-top-24">
                         <img src="./assets/img/avatar5.png" class="mx-auto w-16 rounded-full" alt="chat-img">
                     </p>
@@ -386,10 +386,10 @@
                         <p class="text-center mb-3 font-bold">Group member</p>
                         <div class="member">
                             <div class="member-list-img flex items-center justify-between text-center">
-                                <div class="admin mx-auto">
-                                    <img src="./assets/img/avatar4.png" class="rounded-full w-24 p-1 bg-white" alt="admin-img">
+                                <div class="admin mx-auto w-1/2">
+                                    <img src="./assets/img/avatar4.png" class="rounded-full w-full p-1 bg-white" alt="admin-img">
                                 </div>
-                                <div class="guest ml-2 w-1/2 gap-1 flex justify-between text-center flex-wrap">
+                                <div class="guest ml-2 w-3/4 gap-1 flex justify-between text-center flex-wrap">
                                     <img src="./assets/img/avatar4.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
                                     <img src="./assets/img/avatar5.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
                                     <img src="./assets/img/avatar2.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
@@ -400,7 +400,7 @@
                             </div>
                             <div class="legend flex items-center justify-between text-center">
                                 <p class="admin-legend font-bold w-1/2">Nasir udin</p>
-                                <div class="guest_pagination w-1/2">
+                                <div class="guest_pagination w-3/4">
                                     <button class="mr-5 text-gray-400"><i class="fa fa-caret-left"></i></button>
                                     <span><span class="font-bold">1</span>/10</span>
                                     <button class="ml-5 text-gray-400"><i class="fa fa-caret-right"></i></button>
