bug fix (conversation)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="layout bg-white_perso h-screen max-h-screen">
-        <div class="flex h-full p-5 relative bg-white">
+        <div class="flex h-full px-4 pt-4 pb-10">
             <!--Sidebar 1-->
             <div class="sidebar_1 top-0 bg-blue opacity-75 w-16 h-100 rounded-3xl flex flex-col">
                 <div class="p-3 flex flex-col text-center justify-between h-full divide-y divide-purple">
@@ -75,7 +75,7 @@
             <!--End sidebar 1-->
             
             <!--Sidebar 2-->
-            <div class="sidebar_2 overflow-y-scroll w-1/5 h-100">
+            <div class="sidebar_2 w-1/5 h-full overflow-y-auto">
                 <div class="header p-4 sticky top-0 bg-white">
                     <section class="top-header flex justify-between">
                         <div><span class="text-xl font-bold">Messages</span><span class="bg-red-500 rounded-full py-1 px-2 font-bold text-white text-xs mx-1">5</span></div>
@@ -324,11 +324,13 @@
                 <div class="conversation mx-3 mt-2 mb-10 overflow-y-scroll h-5/6">
                     <div class="px-3">
                         <div class="friends flex w-3/4  my-2">
-                            <span class="friend_img self-end mx-2 w-16"><img src="./assets/img/avatar3.png" class="self-end w-10 rounded-full" alt=""></span>
-                            <span class="friend_message inline-block py-2 pl-2 bg-purple rounded-t-xl rounded-r-xl text-white text-xs">
+                            <img src="./assets/img/avatar3.png" class="self-end rounded-full mx-1 w-8" alt="">
+                            <p class="friend_message py-2 px-2 bg-purple rounded-t-xl rounded-r-xl text-white text-xs">
                                 Lorem ipsum dolor sit amet.
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem consectetur magni voluptates quo id quos.
-                            </span>                                   
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus pariatur possimus voluptate, aliquid sapiente dolorum facilis quaerat mollitia iusto dolor adipisci id, reprehenderit nulla dolore! Eveniet eius doloremque quaerat. Error voluptates odit iure ab similique, voluptatem nisi mollitia tempora. Debitis maiores fugiat aut, modi eum nesciunt voluptate molestias reprehenderit praesentium.
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, itaque molestiae asperiores nulla ab quas, nesciunt debitis nobis sunt laborum dolorum. Itaque debitis id optio animi harum minima blanditiis officia dolor aut fugit, ut ipsum. Repellendus tempore quaerat consectetur repellat amet explicabo, doloremque quam molestiae reprehenderit aliquam eum quisquam, aliquid distinctio facilis deleniti illum, deserunt illo voluptatem odit modi quibusdam quo rerum molestias beatae. Sapiente quam dolorem ducimus rerum odio rem. Id numquam consectetur rerum nisi? Dolores reiciendis inventore, excepturi nobis minus similique dolor? Tempora sunt provident consequatur maiores facere dignissimos consectetur laudantium dolor delectus perferendis fugiat rem esse maxime, autem at sit est quod! Error, nisi pariatur eligendi cumque iusto laborum nemo reiciendis! Molestiae ea sint itaque distinctio enim sapiente nostrum quis autem laborum. Nulla obcaecati quis optio facilis, debitis consequatur commodi, expedita repudiandae aperiam minus qui labore sequi! Incidunt ad praesentium pariatur omnis temporibus officiis laudantium aperiam porro possimus, laboriosam tempore neque asperiores, suscipit excepturi. Tempora quisquam fugit aspernatur cum consequatur! Temporibus illum iste provident modi quis dolorum qui eum deserunt deleniti mollitia, earum esse nihil doloremque quam inventore, minima labore alias quasi maxime officiis necessitatibus possimus facilis! Veritatis placeat reiciendis dignissimos, quasi voluptates fuga ipsam iste quos!
+                            </p>                                   
                         </div>
 
                         <div class="user float-right w-3/4 my-6">
@@ -339,26 +341,19 @@
                         </div>
 
                         <div class="friends flex w-3/4  my-2">
-                            <span class="friend_img self-end mx-2 w-16"><img src="./assets/img/avatar3.png" class="self-end w-10 rounded-full" alt=""></span>
-                            <span class="friend_message inline-block py-2 pl-2 bg-purple rounded-t-xl rounded-r-xl text-white text-xs">
+                            <img src="./assets/img/avatar3.png" class="self-end rounded-full mx-1 w-8" alt="">
+                            <p class="friend_message py-2 px-2 bg-purple rounded-t-xl rounded-r-xl text-white text-xs">
                                 Lorem ipsum dolor sit amet.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem consectetur magni voluptates quo id quos.
-                            </span>                                   
+                            </p>                                   
                         </div>
 
-                        
-                        <div class="user float-right w-3/4 my-4">
+                        <div class="user float-right w-3/4 my-6">
                             <span class="user_message  inline-block py-2 px-2 bg-purple rounded-t-xl rounded-l-xl text-white text-xs">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing.
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quas doloribus saepe, sint ipsam aliquam unde ratione aut repellat autem?
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ab inventore explicabo reiciendis aliquid dolorem nam atque adipisci laudantium tempora officiis est, tenetur placeat voluptas ex natus sapiente quia ut, libero vero commodi voluptates quod sed? Corrupti labore dolore minima earum. Tempore, assumenda laboriosam similique sit sint laborum placeat alias, eveniet in excepturi officia voluptas porro, aliquid recusandae explicabo. Laudantium, vel fugit quo porro culpa nam molestias sunt est sapiente sequi possimus, id qui nisi necessitatibus illo omnis ab harum nihil, delectus non obcaecati unde enim. Odit, at. Facere iusto numquam cupiditate tenetur, perspiciatis veritatis labore magnam. Dolore, aliquam optio.
                             </span>
-                        </div>  
-                        <div class="user float-right w-3/4 my-4">
-                            <span class="user_message  inline-block py-2 px-2 bg-purple rounded-t-xl rounded-l-xl text-white text-xs">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing.
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quas doloribus saepe, sint ipsam aliquam unde ratione aut repellat autem?
-                            </span>
-                        </div>                       
+                        </div>
 
                     </div>    
                 </div>
