bug fix (img members)

--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
             </div>
             
             
-            <div class="w-1/4 h-100 bg-white rounded-r flex flex-col">
-                <div class="header">
+            <div class="w-1/4 h-100 bg-white rounded-r-3xl flex flex-col">
+                <div class="header mx-4">
                     <div class="ml-auto flex items-center justify-between w-3/4 mt-2">
                         <div class="mr-5 w-1/5">
                             <button class="bg-gray-100 focus:outline-none p-2 rounded relative">
@@ -410,7 +410,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="h-full overflow-hidden mt-6">
+                <div class="h-full overflow-hidden mt-6 mr-4">
                     <p class="-top-24">
                         <img src="./assets/img/avatar5.png" class="mx-auto w-16 rounded-full" alt="chat-img">
                     </p>
@@ -421,13 +421,13 @@
                                 <div class="admin mx-auto w-1/2">
                                     <img src="./assets/img/avatar4.png" class="rounded-full w-full p-1 bg-white" alt="admin-img">
                                 </div>
-                                <div class="guest ml-2 w-3/4 gap-1 flex justify-between text-center flex-wrap">
-                                    <img src="./assets/img/avatar4.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
-                                    <img src="./assets/img/avatar5.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
-                                    <img src="./assets/img/avatar2.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
-                                    <img src="./assets/img/avatar5.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
-                                    <img src="./assets/img/avatar4.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
-                                    <img src="./assets/img/avatar3.png" class="rounded-full w-12 p-1 bg-white" alt="mbr">
+                                <div class="guest ml-2 w-3/4 gap-1 flex flex-wrap text-center">
+                                    <img src="./assets/img/avatar4.png" class="rounded-full w-1/4 p-1 bg-white" alt="mbr">
+                                    <img src="./assets/img/avatar5.png" class="rounded-full w-1/4 p-1 bg-white" alt="mbr">
+                                    <img src="./assets/img/avatar2.png" class="rounded-full w-1/4 p-1 bg-white" alt="mbr">
+                                    <img src="./assets/img/avatar5.png" class="rounded-full w-1/4 p-1 bg-white" alt="mbr">
+                                    <img src="./assets/img/avatar4.png" class="rounded-full w-1/4 p-1 bg-white" alt="mbr">
+                                    <img src="./assets/img/avatar3.png" class="rounded-full w-1/4 p-1 bg-white" alt="mbr">
                                 </div>
                             </div>
                             <div class="legend flex items-center justify-between text-center">
