--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="layout bg-white_perso h-screen max-h-screen">
-        <div class="flex h-full px-4 pt-4 pb-10">
+        <div class="flex h-full px-4 pt-4 pb-10 bg-white">
             <!--Sidebar 1-->
             <div class="sidebar_1 top-0 bg-blue opacity-75 w-16 h-100 rounded-3xl flex flex-col">
                 <div class="p-3 flex flex-col text-center justify-between h-full divide-y divide-purple">
