change img top header conversation

--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
             <!--Conversation-->
             <div class="w-1/2 bg-white h-100 relative">
                 <div class="title flex justify-between mx-4 p-3 shadow-xl rounded-xl">
-                    <section class="left-element flex">
-                        <div><i class="fas fa-circle text-purple text-4xl"></i></div>
+                    <section class="left-element flex items-center">
+                        <div><img src="./assets/img/avatar4.png" class="rounded-full w-12" alt="img_member"></div>
                         <ul class="ml-2">
                             <li class="font-bold">Ui Design</li>
-                            <li class="text-xs">Active now</li>
+                            <li class="text-xs text-gray-400">Active now</li>
                         </ul>
                     </section>
                     
