--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     </section>
                 </div>
                 
-                <div class="conversation mx-3 mt-2 mb-4 overflow-y-scroll h-5/6">
+                <div class="conversation mx-3 mb-4 overflow-y-scroll h-5/6">
                     <div class="px-3">
                         <div class="friends flex w-3/4  my-2">
                             <img src="./assets/img/avatar3.png" class="self-end rounded-full mx-1 w-8" alt="">
