--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         }
     </script>
     
+    <script src="https://code.jquery.com/jquery-3.6.1.js" defer></script>
+    <script src="./assets/js/app.js" defer></script>
+
     <!--Offline-->
     <link rel="stylesheet" href="./assets/tailwindcss.css">
     <link rel="stylesheet" href="./assets/all.css">
