add style selected conversation

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <!--Teams conversations-->
                         <h3 class="team-title text-xs text-gray font-extrabold uppercase mx-4 mb-1">team</h3>
                         <ul>
-                            <li class="conversation_item hover:bg-slate-200 active border-l-2 border-red-600 bg-gradient-to-r from-red-300 to-red-100 h-16 flex gap-3 items-center">
+                            <li class="conversation_item hover:bg-slate-200 h-16 flex gap-3 items-center">
                                 <img src="./assets/img/avatar4.png" class="ml-5 rounded-full w-10" alt="friend_image">
                                 <ul class="pr-2">
                                     <li class="text-xs flex justify-between">
