remove class(hidden) in conversationtype (text-decoration)   if active

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
                     <ul class="conversation_type flex justify-between mt-2">
                         <li class="conversation_type_item text-indigo-800">
                             <button type="button" class="focus:outline-none block text-xs font-extrabold mb-2">All conversations</button>
-                            <hr class="w-1/4 h-1 bg-indigo-800 rounded-full">
+                            <hr class="w-1/4 h-1 bg-indigo-800 rounded-full active">
                         </li>
                         <li class="conversation_type_item text">
-                            <button type="button" class="focus:outline-none block text-xs font-bold">Archived</button>
-                            <hr class="w-1/4 hidden">
+                            <button type="button" class="focus:outline-none block text-xs font-bold mb-2">Archived</button>
+                            <hr class="w-3/4 h-1 bg-indigo-800 rounded-full hidden">
                         </li>
                         <li class="conversation_type_item text">
-                            <button type="button" class="focus:outline-none block text-xs font-bold">Starred</button>
-                            <hr class="w-1/4 hidden">
+                            <button type="button" class="focus:outline-none block text-xs font-bold mb-2">Starred</button>
+                            <hr class="w-1/4 h-1 bg-indigo-800 rounded-full hidden">
                         </li>
                     </ul>
                 </div>
