replace bg-gray-100 to bg-slate-200

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="header p-4 sticky top-0 bg-white">
                     <section class="top-header flex justify-between">
                         <div><span class="text-xl font-bold">Messages</span><span class="bg-red-500 rounded-full py-1 px-2 font-bold text-white text-xs mx-1">5</span></div>
-                        <div><button type="button" class="focus:outline-none text-xl focus:outline-none text-gray bg-slate-200 p-1 rounded-full"><i class="fas fa-search"></i></button></div>
+                        <div><button type="button" class="focus:outline-none text-xl focus:outline-none text-gray bg-slate-200 py-1 px-2 rounded-full"><i class="fas fa-search"></i></button></div>
                     </section>
                     <ul class="conversation_type flex justify-between mt-2">
                         <li class="conversation_type_item text-indigo-800">
@@ -343,7 +343,7 @@
                         </div>
 
                         <div class="user float-right w-3/4 my-6">
-                            <span class="user_message  inline-block py-2 px-2 bg-gray-100 text-xs rounded-t-xl rounded-l-xl">
+                            <span class="user_message  inline-block py-2 px-2 bg-slate-200 text-xs rounded-t-xl rounded-l-xl">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing.
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quas doloribus saepe, sint ipsam aliquam unde ratione aut repellat autem?
                             </span>
@@ -357,7 +357,7 @@
                         </div>
 
                         <div class="user float-right w-3/4 my-6">
-                            <span class="user_message  inline-block py-2 px-2 bg-gray-100 text-xs rounded-t-xl rounded-l-xl">
+                            <span class="user_message  inline-block py-2 px-2 bg-slate-200 text-xs rounded-t-xl rounded-l-xl">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing.
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quas doloribus saepe, sint ipsam aliquam unde ratione aut repellat autem?
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ab inventore explicabo reiciendis aliquid dolorem nam atque adipisci laudantium tempora officiis est, tenetur placeat voluptas ex natus sapiente quia ut, libero vero commodi voluptates quod sed? Corrupti labore dolore minima earum. Tempore, assumenda laboriosam similique sit sint laborum placeat alias, eveniet in excepturi officia voluptas porro, aliquid recusandae explicabo. Laudantium, vel fugit quo porro culpa nam molestias sunt est sapiente sequi possimus, id qui nisi necessitatibus illo omnis ab harum nihil, delectus non obcaecati unde enim. Odit, at. Facere iusto numquam cupiditate tenetur, perspiciatis veritatis labore magnam. Dolore, aliquam optio.
@@ -406,7 +406,7 @@
                 <div class="header mx-4">
                     <div class="ml-auto flex items-center justify-between w-3/4 mt-2">
                         <div class="mr-5 w-1/5">
-                            <button type="button" class="bg-gray-100 focus:outline-none p-2 rounded relative">
+                            <button type="button" class="bg-slate-200 focus:outline-none p-2 rounded relative">
                                 <i class="fa fa-bell text-xl  inline-block hover:text-gray-700"></i>
                                 <span class="absolute -top-1 -right-1 p-1 rounded-full bg-red-500"></span>
                             </button>
@@ -429,7 +429,7 @@
                     <p class="-top-24">
                         <img src="./assets/img/avatar5.png" class="mx-auto w-16 rounded-full" alt="chat-img">
                     </p>
-                    <div class="-mt-8 pt-10 bg-gray-100 py-2 rounded-t-3xl px-5 h-full">
+                    <div class="-mt-8 pt-10 bg-slate-200 py-2 rounded-t-3xl px-5 h-full">
                         <p class="text-center mb-3 font-bold">Group member</p>
                         <div class="flex flex-col gap-3">
                             
