--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                             <i class="fab fa-facebook-messenger text-2xl text-white"></i>
                         </div>
                         <ul class="box-message flex flex-col md:mt-24">
-                            <li class="boxType m-1 p-1 rounded-lg"><button type="button" class="focus:outline-none"><i class="far fa-envelope-open text-purple text-xl"></i></button></li>
-                            <li class="boxType m-1 p-1 rounded-lg bg-indigo-300 text-white"><button type="button" class="focus:outline-none"><i class="fas fa-envelope-open-text text-purple text-xl"></i></button></a></li>
-                            <li class="boxType m-1 p-1 rounded-lg"><button type="button" class="focus:outline-none"><i class="far fa-calendar-alt text-purple text-xl"></i></button></li>
-                            <li class="boxType m-1 p-1 rounded-lg"><button type="button" class="focus:outline-none"><i class="fas fa-circle text-purple text-xl"></i></button></li>
+                            <li class="boxType m-1 p-1 rounded-lg text-purple"><button type="button" class="focus:outline-none"><i class="far fa-envelope-open text-xl"></i></button></li>
+                            <li class="boxType m-1 p-1 rounded-lg bg-indigo-300 text-purple text-white"><button type="button" class="focus:outline-none"><i class="fas fa-envelope-open-text text-xl"></i></button></a></li>
+                            <li class="boxType m-1 p-1 rounded-lg text-purple"><button type="button" class="focus:outline-none"><i class="far fa-calendar-alt text-xl"></i></button></li>
+                            <li class="boxType m-1 p-1 rounded-lg text-purple"><button type="button" class="focus:outline-none"><i class="fas fa-circle text-xl"></i></button></li>
                         </ul>
                     </div>
                     <div class="view-tools h-1/4 flex flex-col justify-between py-5 ">
